--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,11 +1,9 @@
 .status-bar {
   position: fixed;
   top: 0;
-  z-index: 1;
   width: 100%;
-  padding: 7px 5px 7px 0;
+  padding: 5px 3px;
   box-sizing: border-box;
-  font-size: 14px;
   display: flex;
   justify-content: center;
   background-color: white;
